panels/sidepanel.css
:root {
    color-scheme: light dark;
}

button {
    min-width: 6em;
}

caption {
    text-align: left;
}

select {
    width: 100%;
}

table, th, td {
    border: 1px solid currentColor;
    border-collapse: collapse
}

td:has(input.violation) {
    background-color: orange;
}

table {
    width: 100%;
}

textarea {
    field-sizing: content;
    width: 100%;
    font-family: monospace;
    line-height: 1.5;
    min-height: -webkit-fill-available;
    max-height: calc(18 * 1.5em);
}

td:has(input.sandbox:not(:checked)):after {
    content: "🔒"
}
td:has(input.sandbox:checked):after {
    content: "🔓"
}
td:has(input#sandbox-enabled:not(:checked)):after {
    content: "🔓"
}
td:has(input#sandbox-enabled:checked):after {
    content: "🔒"
}

table#sandbox th {
    text-align: left
}

table#sandbox tbody th {
    padding-left: 1.5em;
    font-weight: normal;
    max-width: 24ch;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

table#sources th {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

table#sources tbody th {
    max-width: 20ch;
    font-family: monospace;
}

/* hilight active column */
table#sources:has(td:nth-child(2):hover)  col:nth-child(2),
table#sources:has(td:nth-child(3):hover)  col:nth-child(3),
table#sources:has(td:nth-child(4):hover)  col:nth-child(4),
table#sources:has(td:nth-child(5):hover)  col:nth-child(5),
table#sources:has(td:nth-child(6):hover)  col:nth-child(6),
table#sources:has(td:nth-child(7):hover)  col:nth-child(7),
table#sources:has(td:nth-child(8):hover)  col:nth-child(8),
table#sources:has(td:nth-child(9):hover)  col:nth-child(9),
table#sources:has(td:nth-child(10):hover) col:nth-child(10),
table#sources:has(td:nth-child(11):hover) col:nth-child(11),
table#sources:has(td:nth-child(12):hover) col:nth-child(12),
table#sources:has(td:nth-child(13):hover) col:nth-child(13),
table#sources tr:hover {
    background-color: rgba(127, 127, 127, 0.15);
}

table#sandbox tbody th:before {
    content: " Allow ";
}

table#sandbox:not(:has(input#sandbox-enabled:checked)) tbody {
    display: none;
}

:is(col, tr).advanced {
    visibility: collapse;
}

table#sources:has(td.advanced input:is(:checked, .violation)) col.advanced {
    visibility: visible;
}

tr.advanced:has(input:checked) {
    visibility: visible;
}

body.show-advanced :is(col, tr).advanced {
    visibility: visible;
}

body.standalone #panel {
    display: none;
}

body.inert :is(button, table, textarea, #trustcontrol) {
    opacity: 0.4;
    pointer-events: none;
}

/* Hide the trust control when there are no groups to choose from. */
div#trustcontrol:not(:has(option)) {
    display: none;
}

/* Center the checkboxes */
table td:has(input[type="checkbox"]) {
    text-align: center;
}

div#serverpolicy:has(button:disabled) {
    display: none;
}

/* The rules tables */
table#session tr,
table#dynamic tr {
    font-family: monospace;
}

/* The rule policy text */
table#session tr td:last-of-type,
table#dynamic tr td:last-of-type {
    font-size: smaller;
}

